made strobe shift stay stop functionality start and also button look sick

--- a/styles.css
+++ b/styles.css
@@ -300,6 +300,32 @@ button:hover {
     cursor: pointer; 
 }
 
+#glitch-button {
+    --angle: 0deg;
+    border-image: 
+        conic-gradient(from var(--angle),
+        forestgreen, lime, turquoise, cyan, aqua, blue, red) 
+        1;
+    animation: 10s rotate linear infinite; 
+}
+#glitch-button:hover {
+    --angle: 0deg;
+    background: conic-gradient(from var(--angle),
+    forestgreen, lime, turquoise, cyan, aqua, blue, red);
+    border-image: none;
+}
+@keyframes rotate {
+    to {
+        --angle: 360deg;
+    }
+}
+@property --angle {
+    syntax: '<angle>';
+    initial-value: 0deg;
+    inherits: false;
+
+}
+
 nav, #navbar {
     flex-direction: column-reverse;
 }
